# cos

./: .gitmodules  CMakeLists.txt  build-fixes.md  design_doc.md  full_design.md  full_gamepiece_design.md  gamepiece_design_draft.md
cmake/: DevOrin.cmake  TargetUtils.cmake
constants/: camera_constants.json
constants/old_first_bot/: front_extrinsics.json  front_intrinsics.json  left_extrinsics.json  left_intrinsics.json  right_extrinsics.json  right_intrinsics.json
scripts/: build.sh
src/: CMakeLists.txt
src/apriltag/: CMakeLists.txt  apriltag_detector.h  gpu_apriltag_detector_node.cc  gpu_apriltag_detector_node.h  opencv_apriltag_detector_node.cc  opencv_apriltag_detector_node.h  tag_detection.h
src/camera/: CMakeLists.txt  camera_constants.cc  camera_constants.h  nvjpeg_decode_node.cc  nvjpeg_decode_node.h  uvc_camera_node.cc  uvc_camera_node.h
src/control_loops/: CMakeLists.txt  context.h  loop_controller.cc  loop_controller.h
src/examples/: mjpeg_streamer.cc
src/gamepiece/: CMakeLists.txt  gamepiece_detection.h  yolo_node.cc  yolo_node.h
src/localization/: CMakeLists.txt  multi_tag_solver_node.cc  multi_tag_solver_node.h  networktable_sender.cc  networktable_sender.h  position.h  position_sender.h  position_solver.h  sim_sender.h  square_solver_node.cc  square_solver_node.h  unambiguous_solver_node.cc  unambiguous_solver_node.h
src/logging/: CMakeLists.txt  png_image_log_node.h
src/runners/: CMakeLists.txt  example.cc
src/tools/: CMakeLists.txt  jpeg_decode_frames.cc  jpeg_encode_frames.cc  jpeg_extract_log.cc  jpeg_frame_tools.cc  jpeg_frame_tools.h  uvc_logger.cc
src/utils/: CMakeLists.txt  camera_utils.cc  camera_utils.h  constants_from_json.cc  constants_from_json.h  node.h  stop.h  transform.cc  transform.h
src/yolo/: CMakeLists.txt  yolo.cc  yolo.h
unit_tests/: CMakeLists.txt  apriltag_test_helpers.h  cuda_test_helpers.h  test_helpers.h
unit_tests/apriltag/: CMakeLists.txt  apriltag_detector_node_test.cc
unit_tests/camera/: CMakeLists.txt  camera_constants_test.cc  nvjpeg_decode_node_test.cc  uvc_camera_node_test.cc
unit_tests/control_loops/: CMakeLists.txt  loop_controller_test.cc
unit_tests/localization/: CMakeLists.txt  networktable_sender_test.cc  position_sender_test.cc  position_solver_test.cc  solver_nodes_test.cc
unit_tests/logging/: CMakeLists.txt
unit_tests/streamer/: CMakeLists.txt  jpeg_buffer_streamer_node_test.cc
unit_tests/tools/: CMakeLists.txt  jpeg_frame_tools_test.cc
